﻿CHANGELOG 2.5 com_clm_ext ab 1.1.0 --> 3.x ab 3.2.2
------------

Legend:
* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
% -> Performance Fix
- -> Removed
! -> Note

- - - - - 3.4.0 - [26-11-2018] - - - - - - - - - - - - - - - - - - - -
^ GET-Parameter url ersetzt durch Module-Parameter

- - - - - 3.3.2 - [xx-xx-2018] - - - - - - - - - - - - - - - - - - - -
+ View Aktuelle Runde

- - - - - 3.3.1 - [16-07-2017] - - - - - - - - - - - - - - - - - - - -
# Umsetzen pdf-Links
^ idna_convert Anpassung an PHP7

- - - - - 3.3.0 - [01-11-2016] - - - - - - - - - - - - - - - - - - - -
# class idna_convert Mehrfachverwendung

- - - - - 3.2.4 - [30-10-2015] - - - - - - - - - - - - - - - - - - - -
# Bereinigung der repo-Struktur
# Nachbesserung css-Technik
+ Unterstützung von Quellseiten mit Mehrsprachigkeit

- - - - - 3.2.3 - [07-09-2015] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support
# Umstellung der css-Technik

- - - - - 3.2.2 - [19-04-2015] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support
+ eigenständige source für J!3.x

- - - - - 1.2.2 - [06-08-2014] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support
^ Code Bereinigung

- - - - - 1.2.1 - [18-04-2014] - - - - - - - - - - - - - - - - - - - -
^ Neues Submenue analog Hauptkomponente

- - - - - 1.2.0 - [26-03-2014] - - - - - - - - - - - - - - - - - - - -
+ Weiterung des Hervorhebens (Schlagworte, Farben, Schriften)

- - - - - 1.1.5 - [11-02-2014] - - - - - - - - - - - - - - - - - - - -
+ Quelle SJ NRW als Sonderfall eingebaut

- - - - - 1.1.4 - [08-05-2013] - - - - - - - - - - - - - - - - - - - -
# Code-Bereinigung

- - - - - 1.1.3 - [06-11-2012] - - - - - - - - - - - - - - - - - - - -
+ Obere Auswahlfelder in Umsetzung einbezogen
# Prüfung Externe URL
+ Hervorheben von Mannschaften/Vereinen

- - - - - 1.1.2 - [20-10-2012] - - - - - - - - - - - - - - - - - - - -
+ Einbau dieser changelog